--- a/WebUIBlazor/Shared/NavMenu.razor
+++ b/WebUIBlazor/Shared/NavMenu.razor
@@ -16,17 +16,22 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="connection">
-                <span class="oi oi-plus" aria-hidden="true"></span> Connection
+                <span class="oi oi-account-login" aria-hidden="true"></span> Connection
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="temperature">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Temperature
+                <span class="oi oi-dashboard" aria-hidden="true"></span> Temperature
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="controlpanel">
-                <span class="oi oi-plus" aria-hidden="true"></span> Control Panel
+                <span class="oi oi-clipboard" aria-hidden="true"></span> Control Panel
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="print">
+                <span class="oi oi-print" aria-hidden="true"></span> Print
             </NavLink>
         </div>
     </nav>
@@ -35,7 +40,7 @@
 @code {
     private bool collapseNavMenu = true;
 
-    private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
+    private string NavMenuCssClass => collapseNavMenu ? "collapse" : null;
 
     private void ToggleNavMenu()
     {
