--- a/WebUIBlazor/Pages/Print.razor
+++ b/WebUIBlazor/Pages/Print.razor
@@ -3,8 +3,13 @@
 @inject Data.ConnectionServiceSerial serial
 
 @using MachineControlHub.Motion;
+@using MachineControlHub.Print;
 
+<h5 style="color: @(serial.isConnected == "Connected" ? "green" : "red")">@serial.isConnected</h5>
+<br />
+<br />
 <h3>Print</h3>
+
 
 <button @onclick = "() => {print.StartPrint(fileToPrint);print.StartTimeOfPrint();print.GetFileNameAndSize(fileToPrint);}">Start Print</button>
 <button @onclick = "print.PausePrint">Pause Print</button>
@@ -12,12 +17,15 @@
 <br />
 <br />
 
-<p>Choose a file:</p>
+<p>SD files:</p>
 
 <select @bind=fileToPrint>
-    @foreach (var file in files)
+    @if (serial.initialized)
     {
-        <option value=@file>@file</option>
+        @foreach (var file in files)
+        {
+            <option value=@file>@file</option>
+        }
     }
 </select>
 <br />
@@ -26,18 +34,20 @@
 <p>File printing: <strong>@print.printName</strong></p>
 <p>Estimated print time:</p>
 <p>Elapsed print time:</p>
-<p>Start time: <strong>@print.startTimeOfPrint</strong></p>
+<p>Start time: <strong>@print.printJob.FormattedStartTime</strong></p>
 <p>File Size: <strong>@print.fileSize MB</strong></p>
 
 
 @code {
     public string fileToPrint = "";
-
     public List<string> files;
+    // private IBrowserFile file;
 
     protected override void OnInitialized()
     {
-        files = print.ListSDFiles();
-        base.OnInitialized();
+        if (serial.initialized)
+        {
+            files = print.ListSDFiles();
+        }
     }
 }
