--- a/WebUIBlazor/Shared/NavMenu.razor
+++ b/WebUIBlazor/Shared/NavMenu.razor
@@ -34,6 +34,11 @@
                 <span class="oi oi-print" aria-hidden="true"></span> Print
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="bedlevel">
+                <span class="oi-box" aria-hidden="true"></span> Bed Leveling
+            </NavLink>
+        </div>
     </nav>
 </div>
 
